# cpp-test

./: .gitignore  CMakeLists.txt  README.md  flake.nix
archive/: snake.cpp
source/: main.cpp
source/snake/: snake.cpp  snake.h
source/snake/control/: control.cpp  control.h  control_ncurses.cpp  control_ncurses.h  control_sdl.cpp  control_sfml.cpp  control_sfml.h
source/snake/engine/: engine.cpp  engine.h  options.cpp  options.h
source/snake/util/: util.cpp  util.h
src/: control.h  control_ncurses.cpp  control_ncurses.h  engine.cpp  engine.h  game.cpp  game.h  main.cpp  options.h  snake.cpp  snake.h  util.cpp
